--- a/where/package.json
+++ b/where/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "Where",
   "dependencies": {
+    "axios": "^0.26.0",
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.7.0",
     "babel-preset-es2015": "6.24.1",
