--- a/where/package.json
+++ b/where/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "Where",
   "dependencies": {
+    "antd": "^4.20.3",
     "axios": "^0.26.0",
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.7.0",
@@ -14,10 +15,12 @@
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "3.0.0",
-    "react": "16.8.4",
-    "react-bootstrap": "1.0.0-beta.5",
-    "react-dom": "16.8.4",
-    "react-scripts": "2.1.3",
+    "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
+    "react-dom": "^17.0.2",
+    "react-error-overlay": "6.0.9",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
     "truffle": "5.0.5",
     "web3": "1.0.0-beta.55"
   },
@@ -28,7 +31,10 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": [
     ">0.2%",
