--- a/where/package.json
+++ b/where/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "Where",
   "dependencies": {
+    "@react-google-maps/api": "^2.10.2",
     "antd": "^4.20.3",
     "axios": "^0.26.0",
     "babel-polyfill": "6.26.0",
@@ -15,10 +16,13 @@
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "3.0.0",
-    "react": "^17.0.2",
+    "font-awesome": "^4.7.0",
+    "leaflet": "^1.8.0",
+    "react": "^18.0.0",
     "react-bootstrap": "^1.6.1",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.0.0",
     "react-error-overlay": "6.0.9",
+    "react-leaflet": "^4.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "truffle": "5.0.5",
