--- a/where/package.json
+++ b/where/package.json
@@ -4,7 +4,6 @@
   "description": "Where",
   "dependencies": {
     "@react-google-maps/api": "^2.10.2",
-    "antd": "^4.20.3",
     "axios": "^0.26.0",
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.7.0",
@@ -17,8 +16,10 @@
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "3.0.0",
     "font-awesome": "^4.7.0",
+    "formik": "^2.2.9",
     "leaflet": "^1.8.0",
     "react": "^18.0.0",
+    "react-beautiful-dnd": "^13.1.0",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^18.0.0",
     "react-error-overlay": "6.0.9",
@@ -26,7 +27,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "truffle": "5.0.5",
-    "web3": "1.0.0-beta.55"
+    "web3": "1.0.0-beta.55",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
