--- a/where/package.json
+++ b/where/package.json
@@ -17,6 +17,7 @@
     "chai-bignumber": "3.0.0",
     "font-awesome": "^4.7.0",
     "formik": "^2.2.9",
+    "jwt-decode": "^3.1.2",
     "leaflet": "^1.8.0",
     "react": "^18.0.0",
     "react-beautiful-dnd": "^13.1.0",
@@ -24,8 +25,8 @@
     "react-dom": "^18.0.0",
     "react-error-overlay": "6.0.9",
     "react-leaflet": "^4.0.0",
-    "react-router-dom": "^6.3.0",
     "react-rainbow-components": "^1.30.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.5",
     "truffle": "5.0.5",
